--- a/title-spawner.html
+++ b/title-spawner.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KingMods</title>
+  <title>Title Spawner | KingMods</title>
   
 <style>
   body {
@@ -63,20 +63,19 @@
 </head>
 <body>
   <div class="sidebar">
-    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="projects/username-spoofer.html">Username Spoofer</a>
-<a href="projects/process-injector.html">Process Injector</a>
-<a href="projects/rocket-league-mod.html">Rocket League Mod</a>
-<a href="projects/title-spawner.html">Title Spawner</a>
-<a href="projects/pc-tools.html">PC Tools</a>
-<a href="projects/rl-dump-tools.html">RL Dump Tools</a>
+    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="username-spoofer.html">Username Spoofer</a>
+<a href="process-injector.html">Process Injector</a>
+<a href="rocket-league-mod.html">Rocket League Mod</a>
+<a href="title-spawner.html">Title Spawner</a>
+<a href="pc-tools.html">PC Tools</a>
+<a href="rl-dump-tools.html">RL Dump Tools</a>
 
   </div>
   <div class="main-content">
-    <h2>Welcome to KingMods</h2>
-    <p><strong>About Us:</strong> KingMods is a developer collective focused on powerful mods and tools for Rocket League and Windows. Our goal is to empower players and developers with cutting-edge utilities for customization, modding, and optimization.</p>
-    <p><strong>What We Offer:</strong> From spoofers and injectors to full-featured RL frameworks and debugging tools, our suite of open-source projects helps you take control of your game or system.</p>
-    <p><strong>Community:</strong> Join our Discord to get help, contribute, or request features.</p>
+    <h2>Title Spawner</h2>
+    <p>Customize RL titles with color, icons, and glow.<br><br><b>Features:</b><br>- Edit and spawn titles<br>- Preset system<br>- Multiplayer support<br><br><b>Commands:</b><br>customtitle_spawn_item<br>customtitle_spawn_custom_title</p>
     <a class="discord" href="https://discord.gg/kingmods" target="_blank">Join Discord</a>
+    <img src="./image4.png" alt="Title Spawner">
   </div>
 </body>
 </html>
