--- a/username-spoofer.html
+++ b/username-spoofer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KingMods</title>
+  <title>Username Spoofer | KingMods</title>
   
 <style>
   body {
@@ -63,20 +63,19 @@
 </head>
 <body>
   <div class="sidebar">
-    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="projects/username-spoofer.html">Username Spoofer</a>
-<a href="projects/process-injector.html">Process Injector</a>
-<a href="projects/rocket-league-mod.html">Rocket League Mod</a>
-<a href="projects/title-spawner.html">Title Spawner</a>
-<a href="projects/pc-tools.html">PC Tools</a>
-<a href="projects/rl-dump-tools.html">RL Dump Tools</a>
+    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="username-spoofer.html">Username Spoofer</a>
+<a href="process-injector.html">Process Injector</a>
+<a href="rocket-league-mod.html">Rocket League Mod</a>
+<a href="title-spawner.html">Title Spawner</a>
+<a href="pc-tools.html">PC Tools</a>
+<a href="rl-dump-tools.html">RL Dump Tools</a>
 
   </div>
   <div class="main-content">
-    <h2>Welcome to KingMods</h2>
-    <p><strong>About Us:</strong> KingMods is a developer collective focused on powerful mods and tools for Rocket League and Windows. Our goal is to empower players and developers with cutting-edge utilities for customization, modding, and optimization.</p>
-    <p><strong>What We Offer:</strong> From spoofers and injectors to full-featured RL frameworks and debugging tools, our suite of open-source projects helps you take control of your game or system.</p>
-    <p><strong>Community:</strong> Join our Discord to get help, contribute, or request features.</p>
+    <h2>Username Spoofer</h2>
+    <p>This project is a Rocket League name spoofer tool. It allows users to change their in-game display name without restrictions.<br><br><b>Features:</b><br>- Change RL display name instantly<br>- No restart needed<br>- Easy interface<br><br><b>Usage:</b><br>1. Run Injector<br>2. Input name<br>3. Click Spoof<br><br><b>Requirements:</b> Windows, RL, .NET 4.7.2+</p>
     <a class="discord" href="https://discord.gg/kingmods" target="_blank">Join Discord</a>
+    <img src="./image1.png" alt="Username Spoofer">
   </div>
 </body>
 </html>
