--- a/rl-dump-tools.html
+++ b/rl-dump-tools.html
@@ -75,7 +75,7 @@
     <h2>RL Dump Tools</h2>
     <p>RL memory and structure dumper.<br><br><b>Usage:</b><br>- Run while RL open<br>- Dumps in-game variables<br><br><b>Note:</b> For dev/research use only.</p>
     <a class="discord" href="https://discord.gg/kingmods" target="_blank">Join Discord</a>
-    <img src="./image6.jpg" alt="RL Dump Tools">
+    <img src="./image6.png" alt="RL Dump Tools">
   </div>
 </body>
 </html>
