--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 </head>
 <body>
   <div class="sidebar">
-    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="projects/username-spoofer.html">Username Spoofer</a>
-<a href="projects/process-injector.html">Process Injector</a>
-<a href="projects/rocket-league-mod.html">Rocket League Mod</a>
-<a href="projects/title-spawner.html">Title Spawner</a>
-<a href="projects/pc-tools.html">PC Tools</a>
-<a href="projects/rl-dump-tools.html">RL Dump Tools</a>
+    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="username-spoofer.html">Username Spoofer</a>
+<a href="process-injector.html">Process Injector</a>
+<a href="rocket-league-mod.html">Rocket League Mod</a>
+<a href="title-spawner.html">Title Spawner</a>
+<a href="pc-tools.html">PC Tools</a>
+<a href="rl-dump-tools.html">RL Dump Tools</a>
 
   </div>
   <div class="main-content">
