--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <h2>Welcome to KingMods</h2>
     <p><strong>About Us:</strong> KingMods is a developer collective focused on powerful mods and tools for Rocket League and Windows. Our goal is to empower players and developers with cutting-edge utilities for customization, modding, and optimization.</p>
     <p><strong>What We Offer:</strong> From spoofers and injectors to full-featured RL frameworks and debugging tools, our suite of open-source projects helps you take control of your game or system.</p>
-    <p><strong>Community:</strong> Join our Discord to get help, contribute, or request features.</p>
+    <p><strong>Community:</strong> Join our Discord to get help, contribute, request features, or download these projects.</p>
     <a class="discord" href="https://discord.gg/kingmods" target="_blank">Join Discord</a>
   </div>
 </body>
