--- a/title-spawner.html
+++ b/title-spawner.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <div class="sidebar">
-    <h1 onclick="location.href='../index.html'">KingMods</h1><a href="username-spoofer.html">Username Spoofer</a>
+    <h1 onclick="location.href='./index.html'">KingMods</h1><a href="username-spoofer.html">Username Spoofer</a>
 <a href="process-injector.html">Process Injector</a>
 <a href="rocket-league-mod.html">Rocket League Mod</a>
 <a href="title-spawner.html">Title Spawner</a>
